--- a/templates/notes.html
+++ b/templates/notes.html
@@ -6,9 +6,13 @@
 <body>
     <h1>Notes</h1>
     <ul>
-    {% for note in notes %}
-        <li>{{ note }}</li>
+        {% for note in notes %}
+        <p>{{ note }}</p>
+        <form action="{{ url_for('delete_note', note_id=loop.index0) }}" method="post">
+            <input type="submit" value="Supprimer">
+        </form>
     {% endfor %}
+    
     </ul>
     <form method="POST">
         <label for="note">Ajouter une note :</label><br>
